--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "3ahr",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pakenfes-prototype.web.app/",
+  "homepage": "https://tkfes2020-3a.web.app",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
